--- a/apps/note_area/static/css/note_style1.css
+++ b/apps/note_area/static/css/note_style1.css
@@ -69,7 +69,7 @@
     left: 3px;
     top: 57%;*/
     font-size: 20px; /* Adjusted size */
-    transform: translateY(-45%);
+    /*transform: translateY(-45%);*/
     color: #888;
 }
 
@@ -114,6 +114,24 @@
     top: -20px; /* Adjust this value to position the text */
     left: 50%;
     transform: translateX(-50%);
+    background-color: rgba(0, 0, 0, 0.7);
+    color: white;
+    padding: 5px;
+    border-radius: 5px;
+    white-space: nowrap;
+}
+
+/* 上一頁的hover效果 */
+.previous {
+    position: relative;
+    cursor: pointer;
+}
+
+.previous:hover::after {
+    content: "上一頁";
+    position: absolute;
+    top: -20px; /* Adjust this value to position the text */
+    left: calc(100% + 3px);
     background-color: rgba(0, 0, 0, 0.7);
     color: white;
     padding: 5px;
